# RKEM

./: README.md
cpp/: CMakeLists.txt  build-linux.sh
cpp/include/: camera.h  common.h  defect_engine.h  fatigue_engine.h  ipc_manager.h  logger.h  model_engine.h  ocr_engine.h  qt_interface.h  serial_port.h  thread_pool.h
cpp/install/rk3588_linux/: camera_capture_service  main_process  process_defect  process_fatigue  process_ocr  two_model_camera_demo
cpp/install/rk3588_linux/model/defect/: dataset.txt
cpp/install/rk3588_linux/model/ocr/: PP-OCRv5_mobile_det.rknn
cpp/src/: camera.cc  camera_capture_service.cc  defect_engine.cc  fatigue_engine.cc  ipc_manager.cc  logger.cc  main.cc  model_engine.cc  ocr_engine.cc  process_defect.cc  process_fatigue.cc  process_ocr.cc  qt_interface.cc  serial_port.cc  thread_pool.cc  two_model_camera_demo.cc
docs/: 执行计划.md
model/fatigue/: dataset.txt
model/ocr/: dataset.txt
